[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zmq = "0.9.2"
rand = "0.8.5"

[dependencies.uuid]
version = "1.2.1"
features = [
  "v4",                # Lets you generate random UUIDs
  "fast-rng",          # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[[bin]]
name = "pub"
path = "src/pub.rs"

[[bin]]
name = "broker"
path = "src/broker.rs"

[[bin]]
name = "sub"
path = "src/sub.rs"
